chore: update CLAUDE.md

--- a/bukkit-kotlin/build.gradle
+++ b/bukkit-kotlin/build.gradle
@@ -1,20 +1,9 @@
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        mavenLocal()
-    }
-    dependencies {
-        classpath 'io.typst:spigradle:3.4.1'
-    }
-}
-
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.2.21'
     id 'maven-publish'
     id 'signing'
+    id 'io.typst.spigradle.base' version '3.4.1'
 }
-
-pluginManager.apply('io.typst.spigradle.base')
 
 repositories {
     mavenCentral()
