--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,20 +1,9 @@
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        mavenLocal()
-    }
-    dependencies {
-        classpath 'io.typst:spigradle:3.4.1'
-    }
-}
-
 plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
+    id 'io.typst.spigradle.base' version '3.4.1'
 }
-
-pluginManager.apply('io.typst.spigradle.base')
 
 group = 'io.typst'
 
@@ -27,7 +16,7 @@ dependencies {
     compileOnly lombok('1.18.36')
     annotationProcessor lombok('1.18.36')
     implementation 'org.jetbrains:annotations:26.0.2-1'
-    api 'io.typst:inventory-core:2.4.0'
+    api 'io.typst:inventory-core:2.7.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
