--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,7 @@ plugins {
 group = 'io.typst'
 
 repositories {
+    mavenLocal()
     mavenCentral()
     spigotmc()
 }
@@ -16,7 +17,7 @@ dependencies {
     compileOnly lombok('1.18.36')
     annotationProcessor lombok('1.18.36')
     implementation 'org.jetbrains:annotations:26.0.2-1'
-    api 'io.typst:inventory-core:2.7.2'
+    api 'io.typst:inventory-core:2.7.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
