--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     // NOTE: downgraded to 1.20.1 for compatibility
     compileOnly spigot('1.20.1')
     api project(':view-core')
-    api 'io.typst:inventory-bukkit:2.7.2'
+    api libs.inventory.bukkit
     implementation 'org.jetbrains:annotations:26.0.2-1'
     compileOnly lombok('1.18.36')
     annotationProcessor lombok('1.18.36')
