--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -3,7 +3,7 @@ import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'io.typst.spigradle' version '3.4.1'
+    alias(spigots.plugins.spigot)
 }
 
 group = 'io.typst'
@@ -11,16 +11,19 @@ group = 'io.typst'
 repositories {
     mavenLocal()
     mavenCentral()
-    spigotmc()
-    maven { url = 'https://repo.extendedclip.com/releases/' }
+    spigotRepos {
+        spigotmc()
+        papermc()
+        placeholderApi()
+    }
 }
 
 dependencies {
     shadow project(':view-bukkit')
-    compileOnly spigot('1.21.8')
-    compileOnly lombok('1.18.36')
-    compileOnly('me.clip:placeholderapi:2.11.6')
-    annotationProcessor lombok('1.18.36')
+    compileOnly spigots.paper.api
+    compileOnly spigots.placeholderApi
+    compileOnly commons.lombok
+    annotationProcessor commons.lombok
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
@@ -45,7 +48,7 @@ spigot {
             libs.inventory.bukkit.get().toString(),
     ]
     apiVersion = '1.21'
-    softDepends = ['PlaceholderAPI']
+    softDepend = ['PlaceholderAPI']
 }
 
 debugSpigot {
