--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
+    alias(spigots.plugins.spigot)
     id 'io.typst.spigradle.base' version '3.4.1'
 }
 
