--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ dependencyResolutionManagement {
         create("spigots") {
             from("io.typst:spigot-catalog:1.0.0")
             // if you need to override the version:
-            // version("spigot", "1.21.10-R0.1-SNAPSHOT")
+             version("spigot", "1.20.1-R0.1-SNAPSHOT")
         }
         create("commons") {
             from("io.typst:common-catalog:1.0.0")
